Add website content generated from `8d572fc1551b4cdb4c993b85dc9366c9e8783a6a`

--- a/release-notes.html
+++ b/release-notes.html
@@ -420,10 +420,16 @@
 <p>Update <code>de.flapdoodle.reverse:de.flapdoodle.reverse</code> to version <code>1.8.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/2886">2886</a>)</p>
 </li>
 <li>
+<p>Update <code>io.fabric8:docker-maven-plugin</code> to version <code>0.45.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/2958">2958</a>)</p>
+</li>
+<li>
 <p>Update <code>io.netty:netty-bom</code> to version <code>4.1.112.Final</code> (<a href="https://github.com/apache/logging-log4j2/pull/2763">2763</a>)</p>
 </li>
 <li>
 <p>Update <code>net.bytebuddy:byte-buddy</code> to version <code>1.15.1</code> (<a href="https://github.com/apache/logging-log4j2/pull/2905">2905</a>)</p>
+</li>
+<li>
+<p>Update <code>net.java.dev.jna:jna</code> to version <code>5.15.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/2957">2957</a>)</p>
 </li>
 <li>
 <p>Update <code>net.javacrumbs.json-unit:json-unit</code> to version <code>3.4.1</code> (<a href="https://github.com/apache/logging-log4j2/pull/2748">2748</a>)</p>
@@ -507,10 +513,13 @@
 <p>Update <code>org.mockito:mockito-bom</code> to version <code>5.13.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/2896">2896</a>)</p>
 </li>
 <li>
-<p>Update <code>org.mongodb:bson</code> to version <code>5.1.3</code> (<a href="https://github.com/apache/logging-log4j2/pull/2820">2820</a>)</p>
+<p>Update <code>org.mongodb:bson</code> to version <code>5.1.4</code> (<a href="https://github.com/apache/logging-log4j2/pull/2919">2919</a>)</p>
 </li>
 <li>
 <p>Update <code>org.slf4j:slf4j-api</code> to version <code>2.0.16</code> (<a href="https://github.com/apache/logging-log4j2/pull/2828">2828</a>)</p>
+</li>
+<li>
+<p>Update <code>org.slf4j:slf4j-nop</code> to version <code>2.0.16</code> (<a href="https://github.com/apache/logging-log4j2/pull/2959">2959</a>)</p>
 </li>
 <li>
 <p>Update <code>org.springframework.boot:spring-boot-autoconfigure</code> to version <code>3.3.3</code> (<a href="https://github.com/apache/logging-log4j2/pull/2884">2884</a>)</p>
