Add website content generated from `caa0f1dee5fb337fb09f56b5b670ee899eb95766`

--- a/development.html
+++ b/development.html
@@ -442,10 +442,18 @@ See <a href="https://logging.apache.org/logging-parent/usage.html#website">the L
 </div>
 </div>
 <div class="sect1">
-<h2 id="building"><a class="anchor" href="#building"></a>How can I build Log4j from sources?</h2>
+<h2 id="building"><a class="anchor" href="#building"></a>How can I build the project?</h2>
 <div class="sectionbody">
 <div class="paragraph">
 <p>See <a href="https://github.com/apache/logging-log4j2/tree/2.x/BUILDING.adoc">the build instructions</a>.</p>
+</div>
+</div>
+</div>
+<div class="sect1">
+<h2 id="fuzzing"><a class="anchor" href="#fuzzing"></a>How can I run fuzz tests?</h2>
+<div class="sectionbody">
+<div class="paragraph">
+<p>See <a href="https://github.com/apache/logging-log4j2/tree/2.x/FUZZING.adoc">the fuzzing instructions</a>.</p>
 </div>
 </div>
 </div>
