--- a/release-notes.html
+++ b/release-notes.html
@@ -361,6 +361,16 @@
 </div>
 </div>
 <div class="sect2">
+<h3 id="release-notes-2-x-x-added"><a class="anchor" href="#release-notes-2-x-x-added"></a>Added</h3>
+<div class="ulist">
+<ul>
+<li>
+<p>Add Google OSS-Fuzz integration (<a href="https://github.com/apache/logging-log4j2/pull/2949">2949</a>)</p>
+</li>
+</ul>
+</div>
+</div>
+<div class="sect2">
 <h3 id="release-notes-2-x-x-changed"><a class="anchor" href="#release-notes-2-x-x-changed"></a>Changed</h3>
 <div class="ulist">
 <ul>
@@ -395,6 +405,9 @@
 </li>
 <li>
 <p>Fix <code>putAll()</code> in the default thread context map implementation (<a href="https://github.com/apache/logging-log4j2/pull/2942">2942</a>)</p>
+</li>
+<li>
+<p>Avoid surrogate character handling in <code>JsonWriter</code></p>
 </li>
 </ul>
 </div>
