--- a/plugin-reference.html
+++ b/plugin-reference.html
@@ -16208,6 +16208,41 @@ toString(), or to output the value of a specific key within the property bundle 
 <div class="sect2">
 <h3 id="org-apache-logging-log4j_log4j-jdbc"><a class="anchor" href="#org-apache-logging-log4j_log4j-jdbc"></a><code>org.apache.logging.log4j:log4j-jdbc</code></h3>
 <div class="sect3">
+<h4 id="org-apache-logging-log4j_log4j-jdbc_org-apache-logging-log4j-jdbc-appender-AbstractDriverManagerConnectionSource"><a class="anchor" href="#org-apache-logging-log4j_log4j-jdbc_org-apache-logging-log4j-jdbc-appender-AbstractDriverManagerConnectionSource"></a><code>org.apache.logging.log4j.jdbc.appender.AbstractDriverManagerConnectionSource</code></h4>
+<div class="dlist">
+<dl>
+<dt class="hdlist1">Class</dt>
+<dd>
+<p><code>org.apache.logging.log4j.jdbc.appender.AbstractDriverManagerConnectionSource</code></p>
+</dd>
+<dt class="hdlist1">Provider</dt>
+<dd>
+<p><code>org.apache.logging.log4j:log4j-jdbc</code></p>
+</dd>
+</dl>
+</div>
+<div class="paragraph">
+<p>A <a href="#org-apache-logging-log4j_log4j-jdbc_org-apache-logging-log4j-jdbc-appender-ConnectionSource">ConnectionSource</a> that uses a JDBC connection string, a user name, and a password to call <code>java.sql.DriverManager#getConnection(String,String,String)</code>.</p>
+</div>
+<div class="paragraph">
+<p>This plugin does not provide any connection pooling unless it is available through the connection string and driver itself.
+This handy to get you off the ground without having to deal with JNDI.</p>
+</div>
+<div class="sect4">
+<h5 id="org-apache-logging-log4j_log4j-jdbc_org-apache-logging-log4j-jdbc-appender-AbstractDriverManagerConnectionSource_implementations"><a class="anchor" href="#org-apache-logging-log4j_log4j-jdbc_org-apache-logging-log4j-jdbc-appender-AbstractDriverManagerConnectionSource_implementations"></a>Known implementations</h5>
+<div class="ulist">
+<ul>
+<li>
+<p><a href="#org-apache-logging-log4j_log4j-jdbc-dbcp2_org-apache-logging-log4j-dbcp2-appender-PoolingDriverConnectionSource">PoolingDriverConnectionSource</a></p>
+</li>
+<li>
+<p><a href="#org-apache-logging-log4j_log4j-jdbc_org-apache-logging-log4j-jdbc-appender-DriverManagerConnectionSource">DriverManagerConnectionSource</a></p>
+</li>
+</ul>
+</div>
+</div>
+</div>
+<div class="sect3">
 <h4 id="org-apache-logging-log4j_log4j-jdbc_org-apache-logging-log4j-jdbc-appender-ColumnConfig"><a class="anchor" href="#org-apache-logging-log4j_log4j-jdbc_org-apache-logging-log4j-jdbc-appender-ColumnConfig"></a>Column</h4>
 <div class="dlist">
 <dl>
@@ -16957,34 +16992,6 @@ This appender can be reconfigured at run time.</p>
 </tr>
 </tbody>
 </table>
-</div>
-</div>
-<div class="sect3">
-<h4 id="org-apache-logging-log4j_log4j-jdbc-dbcp2_org-apache-logging-log4j-jdbc-appender-AbstractDriverManagerConnectionSource"><a class="anchor" href="#org-apache-logging-log4j_log4j-jdbc-dbcp2_org-apache-logging-log4j-jdbc-appender-AbstractDriverManagerConnectionSource"></a><code>org.apache.logging.log4j.jdbc.appender.AbstractDriverManagerConnectionSource</code></h4>
-<div class="dlist">
-<dl>
-<dt class="hdlist1">Class</dt>
-<dd>
-<p><code>org.apache.logging.log4j.jdbc.appender.AbstractDriverManagerConnectionSource</code></p>
-</dd>
-<dt class="hdlist1">Provider</dt>
-<dd>
-<p><code>org.apache.logging.log4j:log4j-jdbc-dbcp2</code></p>
-</dd>
-</dl>
-</div>
-<div class="sect4">
-<h5 id="org-apache-logging-log4j_log4j-jdbc-dbcp2_org-apache-logging-log4j-jdbc-appender-AbstractDriverManagerConnectionSource_implementations"><a class="anchor" href="#org-apache-logging-log4j_log4j-jdbc-dbcp2_org-apache-logging-log4j-jdbc-appender-AbstractDriverManagerConnectionSource_implementations"></a>Known implementations</h5>
-<div class="ulist">
-<ul>
-<li>
-<p><a href="#org-apache-logging-log4j_log4j-jdbc-dbcp2_org-apache-logging-log4j-dbcp2-appender-PoolingDriverConnectionSource">PoolingDriverConnectionSource</a></p>
-</li>
-<li>
-<p><a href="#org-apache-logging-log4j_log4j-jdbc_org-apache-logging-log4j-jdbc-appender-DriverManagerConnectionSource">DriverManagerConnectionSource</a></p>
-</li>
-</ul>
-</div>
 </div>
 </div>
 </div>
