--- a/release-notes.html
+++ b/release-notes.html
@@ -407,6 +407,9 @@
 <div class="ulist">
 <ul>
 <li>
+<p>Update <code>ch.qos.logback:logback-core</code> to version <code>1.4.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/2975">2975</a>)</p>
+</li>
+<li>
 <p>Update <code>co.elastic.clients:elasticsearch-java</code> to version <code>8.15.1</code> (<a href="https://github.com/apache/logging-log4j2/pull/2925">2925</a>)</p>
 </li>
 <li>
@@ -416,7 +419,16 @@
 <p>Update <code>org.eclipse.platform:org.eclipse.osgi</code> to version <code>3.21.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/2940">2940</a>)</p>
 </li>
 <li>
+<p>Update <code>org.openrewrite.maven:rewrite-maven-plugin</code> to version <code>5.14.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/2967">2967</a>)</p>
+</li>
+<li>
+<p>Update <code>org.openrewrite.recipe:rewrite-logging-frameworks</code> to version <code>2.2.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/2973">2973</a>)</p>
+</li>
+<li>
 <p>Update <code>org.slf4j:slf4j-nop</code> to version <code>2.0.16</code> (<a href="https://github.com/apache/logging-log4j2/pull/2955">2955</a>)</p>
+</li>
+<li>
+<p>Update <code>org.springframework.cloud:spring-cloud-context</code> to version <code>4.0.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/2974">2974</a>)</p>
 </li>
 </ul>
 </div>
