Add website content generated from `87d0dc48d2bea8be0fdb2d67f60121ace985551d`

--- a/release-notes.html
+++ b/release-notes.html
@@ -413,22 +413,34 @@
 <p>Update <code>co.elastic.clients:elasticsearch-java</code> to version <code>8.15.1</code> (<a href="https://github.com/apache/logging-log4j2/pull/2925">2925</a>)</p>
 </li>
 <li>
+<p>Update <code>commons-io:commons-io</code> to version <code>2.17.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/2984">2984</a>)</p>
+</li>
+<li>
 <p>Update <code>net.java.dev.jna:jna</code> to version <code>5.15.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/2956">2956</a>)</p>
+</li>
+<li>
+<p>Update <code>org.apache.logging:logging-parent</code> to version <code>11.3.0</code></p>
+</li>
+<li>
+<p>Update <code>org.apache.tomcat:tomcat-juli</code> to version <code>10.1.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/2982">2982</a>)</p>
 </li>
 <li>
 <p>Update <code>org.eclipse.platform:org.eclipse.osgi</code> to version <code>3.21.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/2940">2940</a>)</p>
 </li>
 <li>
-<p>Update <code>org.openrewrite.maven:rewrite-maven-plugin</code> to version <code>5.14.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/2967">2967</a>)</p>
+<p>Update <code>org.openrewrite.maven:rewrite-maven-plugin</code> to version <code>5.15.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/2983">2983</a>)</p>
 </li>
 <li>
-<p>Update <code>org.openrewrite.recipe:rewrite-logging-frameworks</code> to version <code>2.2.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/2973">2973</a>)</p>
+<p>Update <code>org.openrewrite.recipe:rewrite-logging-frameworks</code> to version <code>2.3.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/2986">2986</a>)</p>
+</li>
+<li>
+<p>Update <code>org.openrewrite.recipe:rewrite-migrate-java</code> to version <code>2.4.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/2989">2989</a>)</p>
 </li>
 <li>
 <p>Update <code>org.slf4j:slf4j-nop</code> to version <code>2.0.16</code> (<a href="https://github.com/apache/logging-log4j2/pull/2955">2955</a>)</p>
 </li>
 <li>
-<p>Update <code>org.springframework.cloud:spring-cloud-context</code> to version <code>4.0.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/2974">2974</a>)</p>
+<p>Update <code>org.springframework.cloud:spring-cloud-context</code> to version <code>4.1.4</code> (<a href="https://github.com/apache/logging-log4j2/pull/2985">2985</a>)</p>
 </li>
 </ul>
 </div>
