Add website content generated from `5208b6ef67161821e329dab78685144897dae724`

--- a/release-notes.html
+++ b/release-notes.html
@@ -408,7 +408,7 @@
 <p>Update <code>commons-codec:commons-codec</code> to version <code>1.17.1</code> (<a href="https://github.com/apache/logging-log4j2/pull/2743">2743</a>)</p>
 </li>
 <li>
-<p>Update <code>commons-io:commons-io</code> to version <code>2.16.1</code> (<a href="https://github.com/apache/logging-log4j2/pull/2456">2456</a>)</p>
+<p>Update <code>commons-io:commons-io</code> to version <code>2.17.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/2979">2979</a>)</p>
 </li>
 <li>
 <p>Update <code>commons-logging:commons-logging</code> to version <code>1.3.4</code> (<a href="https://github.com/apache/logging-log4j2/pull/2865">2865</a>)</p>
@@ -453,7 +453,7 @@
 <p>Update <code>org.apache.logging.log4j:log4j-docgen-maven-plugin</code> to version <code>0.9.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/2579">2579</a>)</p>
 </li>
 <li>
-<p>Update <code>org.apache.logging:logging-parent</code> to version <code>11.2.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/2903">2903</a>)</p>
+<p>Update <code>org.apache.logging:logging-parent</code> to version <code>11.3.0</code></p>
 </li>
 <li>
 <p>Update <code>org.apache.maven:maven-core</code> to version <code>3.9.9</code> (<a href="https://github.com/apache/logging-log4j2/pull/2857">2857</a>)</p>
@@ -514,6 +514,15 @@
 </li>
 <li>
 <p>Update <code>org.mongodb:bson</code> to version <code>5.1.4</code> (<a href="https://github.com/apache/logging-log4j2/pull/2919">2919</a>)</p>
+</li>
+<li>
+<p>Update <code>org.openrewrite.maven:rewrite-maven-plugin</code> to version <code>5.15.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/2993">2993</a>)</p>
+</li>
+<li>
+<p>Update <code>org.openrewrite.recipe:rewrite-logging-frameworks</code> to version <code>2.3.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/2992">2992</a>)</p>
+</li>
+<li>
+<p>Update <code>org.openrewrite.recipe:rewrite-migrate-java</code> to version <code>2.5.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/2990">2990</a>)</p>
 </li>
 <li>
 <p>Update <code>org.slf4j:slf4j-api</code> to version <code>2.0.16</code> (<a href="https://github.com/apache/logging-log4j2/pull/2828">2828</a>)</p>
