Add website content generated from `854488f6b656ca732a9ba4eaa963a772618dcff5`

--- a/release-notes.html
+++ b/release-notes.html
@@ -394,6 +394,9 @@
 <p>Simplify the <code>SSLContext</code> instantiation for the TLS (formerly known as SSL) configuration (<a href="https://issues.apache.org/jira/browse/LOG4J2-2988">LOG4J2-2988</a>, <a href="https://github.com/apache/logging-log4j2/pull/2767">2767</a>)</p>
 </li>
 <li>
+<p>Fix reloading of the configuration from an HTTP(S) source (<a href="https://github.com/apache/logging-log4j2/issues/2937">2937</a>)</p>
+</li>
+<li>
 <p>Fix <code>putAll()</code> in the default thread context map implementation (<a href="https://github.com/apache/logging-log4j2/pull/2942">2942</a>)</p>
 </li>
 <li>
@@ -413,6 +416,9 @@
 <p>Update <code>co.elastic.clients:elasticsearch-java</code> to version <code>8.15.1</code> (<a href="https://github.com/apache/logging-log4j2/pull/2925">2925</a>)</p>
 </li>
 <li>
+<p>Update <code>com.github.luben:zstd-jni</code> to version <code>1.5.6-6</code> (<a href="https://github.com/apache/logging-log4j2/pull/2998">2998</a>)</p>
+</li>
+<li>
 <p>Update <code>commons-io:commons-io</code> to version <code>2.17.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/2984">2984</a>)</p>
 </li>
 <li>
@@ -422,7 +428,7 @@
 <p>Update <code>org.apache.logging:logging-parent</code> to version <code>11.3.0</code></p>
 </li>
 <li>
-<p>Update <code>org.apache.tomcat:tomcat-juli</code> to version <code>10.1.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/2982">2982</a>)</p>
+<p>Update <code>org.apache.tomcat:tomcat-juli</code> to version <code>10.1.30</code> (<a href="https://github.com/apache/logging-log4j2/pull/2999">2999</a>)</p>
 </li>
 <li>
 <p>Update <code>org.eclipse.platform:org.eclipse.osgi</code> to version <code>3.21.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/2940">2940</a>)</p>
