--- a/manual/installation.html
+++ b/manual/installation.html
@@ -983,7 +983,7 @@ See <a href="../log4j-jul.html" class="xref page">JUL-to-Log4j bridge</a> for mo
 <div class="content">
 <pre class="highlightjs highlight"><code class="language-xml hljs" data-lang="xml">&lt;dependency&gt;
   &lt;groupId&gt;org.apache.logging.log4j&lt;/groupId&gt;
-  &lt;artifactId&gt;log4j-jpa&lt;/artifactId&gt;
+  &lt;artifactId&gt;log4j-jpl&lt;/artifactId&gt;
   &lt;scope&gt;runtime&lt;/scope&gt;
 &lt;/dependency&gt;</code></pre>
 </div>
@@ -995,7 +995,7 @@ See <a href="../log4j-jul.html" class="xref page">JUL-to-Log4j bridge</a> for mo
 </div>
 <div class="listingblock">
 <div class="content">
-<pre class="highlightjs highlight"><code class="language-groovy hljs" data-lang="groovy">runtimeOnly 'org.apache.logging.log4j:log4j-jpa'</code></pre>
+<pre class="highlightjs highlight"><code class="language-groovy hljs" data-lang="groovy">runtimeOnly 'org.apache.logging.log4j:log4j-jpl'</code></pre>
 </div>
 </div>
 </div>
