--- a/release-notes.html
+++ b/release-notes.html
@@ -416,6 +416,9 @@
 <p>Update <code>co.elastic.clients:elasticsearch-java</code> to version <code>8.15.1</code> (<a href="https://github.com/apache/logging-log4j2/pull/2925">2925</a>)</p>
 </li>
 <li>
+<p>Update <code>com.fasterxml.jackson:jackson-bom</code> to version <code>2.18.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/3027">3027</a>)</p>
+</li>
+<li>
 <p>Update <code>com.github.luben:zstd-jni</code> to version <code>1.5.6-6</code> (<a href="https://github.com/apache/logging-log4j2/pull/2998">2998</a>)</p>
 </li>
 <li>
