--- a/release-notes.html
+++ b/release-notes.html
@@ -390,10 +390,10 @@
 <p>Update <code>co.elastic.logging:log4j2-ecs-layout</code> to version <code>1.6.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/2303">2303</a>)</p>
 </li>
 <li>
-<p>Update <code>com.fasterxml.jackson:jackson-bom</code> to version <code>2.17.2</code> (<a href="https://github.com/apache/logging-log4j2/pull/2718">2718</a>)</p>
+<p>Update <code>com.fasterxml.jackson:jackson-bom</code> to version <code>2.18.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/3026">3026</a>)</p>
 </li>
 <li>
-<p>Update <code>com.github.luben:zstd-jni</code> to version <code>1.5.6-6</code> (<a href="https://github.com/apache/logging-log4j2/pull/3001">3001</a>)</p>
+<p>Update <code>com.github.luben:zstd-jni</code> to version <code>1.5.6-6</code> (<a href="https://github.com/apache/logging-log4j2/pull/3019">3019</a>)</p>
 </li>
 <li>
 <p>Update <code>com.github.tomakehurst:wiremock-jre8</code> to version <code>2.35.2</code> (<a href="https://github.com/apache/logging-log4j2/pull/2305">2305</a>)</p>
@@ -429,7 +429,7 @@
 <p>Update <code>io.netty:netty-bom</code> to version <code>4.1.112.Final</code> (<a href="https://github.com/apache/logging-log4j2/pull/2763">2763</a>)</p>
 </li>
 <li>
-<p>Update <code>net.bytebuddy:byte-buddy</code> to version <code>1.15.1</code> (<a href="https://github.com/apache/logging-log4j2/pull/2905">2905</a>)</p>
+<p>Update <code>net.bytebuddy:byte-buddy</code> to version <code>1.15.3</code> (<a href="https://github.com/apache/logging-log4j2/pull/3025">3025</a>)</p>
 </li>
 <li>
 <p>Update <code>net.java.dev.jna:jna</code> to version <code>5.15.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/2957">2957</a>)</p>
@@ -441,7 +441,7 @@
 <p>Update <code>org.apache.commons:commons-compress</code> to version <code>1.27.1</code> (<a href="https://github.com/apache/logging-log4j2/pull/2870">2870</a>)</p>
 </li>
 <li>
-<p>Update <code>org.apache.commons:commons-csv</code> to version <code>1.11.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/2562">2562</a>)</p>
+<p>Update <code>org.apache.commons:commons-csv</code> to version <code>1.12.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/3020">3020</a>)</p>
 </li>
 <li>
 <p>Update <code>org.apache.commons:commons-dbcp2</code> to version <code>2.12.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/2342">2342</a>)</p>
@@ -547,6 +547,9 @@
 </li>
 <li>
 <p>Update <code>org.xmlunit:xmlunit-core</code> to version <code>2.10.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/2545">2545</a>)</p>
+</li>
+<li>
+<p>Update <code>uk.org.webcompere:system-stubs-core</code> to version <code>2.1.7</code> (<a href="https://github.com/apache/logging-log4j2/pull/3022">3022</a>)</p>
 </li>
 </ul>
 </div>
