Add website content generated from `1e3223cfa7e1a474ae1cc6872a475690bd402c4f`

--- a/release-notes.html
+++ b/release-notes.html
@@ -425,7 +425,13 @@
 <p>Update <code>commons-io:commons-io</code> to version <code>2.17.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/2984">2984</a>)</p>
 </li>
 <li>
+<p>Update <code>io.fabric8:docker-maven-plugin</code> to version <code>0.45.1</code> (<a href="https://github.com/apache/logging-log4j2/pull/3037">3037</a>)</p>
+</li>
+<li>
 <p>Update <code>net.java.dev.jna:jna</code> to version <code>5.15.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/2956">2956</a>)</p>
+</li>
+<li>
+<p>Update <code>org.apache.commons:commons-csv</code> to version <code>1.12.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/3014">3014</a>)</p>
 </li>
 <li>
 <p>Update <code>org.apache.logging:logging-parent</code> to version <code>11.3.0</code></p>
@@ -435,6 +441,9 @@
 </li>
 <li>
 <p>Update <code>org.eclipse.platform:org.eclipse.osgi</code> to version <code>3.21.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/2940">2940</a>)</p>
+</li>
+<li>
+<p>Update <code>org.mongodb:bson</code> to version <code>5.2.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/3015">3015</a>)</p>
 </li>
 <li>
 <p>Update <code>org.openrewrite.maven:rewrite-maven-plugin</code> to version <code>5.15.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/2983">2983</a>)</p>
