Add website content generated from `125fbb90f2f4f57390eac64e207228e2a5cd15dd`

--- a/release-notes.html
+++ b/release-notes.html
@@ -400,6 +400,9 @@
 <p>Fix <code>putAll()</code> in the default thread context map implementation (<a href="https://github.com/apache/logging-log4j2/pull/2942">2942</a>)</p>
 </li>
 <li>
+<p>Fix <code>getLogger()</code> source incompatibility in Log4j 1 to Log4j 2 API Bridge (i.e., <code>log4j-1.2-api</code>) (<a href="https://github.com/apache/logging-log4j2/pull/3030">3030</a>)</p>
+</li>
+<li>
 <p>Avoid surrogate character handling in <code>JsonWriter</code></p>
 </li>
 </ul>
