Add website content generated from `57a15ce3119d5042426708068ae99c5e62ae704a`

--- a/release-notes.html
+++ b/release-notes.html
@@ -423,7 +423,7 @@
 <p>Update <code>de.flapdoodle.reverse:de.flapdoodle.reverse</code> to version <code>1.8.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/2886">2886</a>)</p>
 </li>
 <li>
-<p>Update <code>io.fabric8:docker-maven-plugin</code> to version <code>0.45.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/2958">2958</a>)</p>
+<p>Update <code>io.fabric8:docker-maven-plugin</code> to version <code>0.45.1</code> (<a href="https://github.com/apache/logging-log4j2/pull/3036">3036</a>)</p>
 </li>
 <li>
 <p>Update <code>io.netty:netty-bom</code> to version <code>4.1.112.Final</code> (<a href="https://github.com/apache/logging-log4j2/pull/2763">2763</a>)</p>
@@ -451,6 +451,9 @@
 </li>
 <li>
 <p>Update <code>org.apache.groovy:groovy-bom</code> to version <code>4.0.23</code> (<a href="https://github.com/apache/logging-log4j2/pull/2947">2947</a>)</p>
+</li>
+<li>
+<p>Update <code>org.apache.logging.log4j:log4j-api</code> to version <code>2.24.1</code> (<a href="https://github.com/apache/logging-log4j2/pull/3035">3035</a>)</p>
 </li>
 <li>
 <p>Update <code>org.apache.logging.log4j:log4j-docgen-maven-plugin</code> to version <code>0.9.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/2579">2579</a>)</p>
@@ -513,7 +516,7 @@
 <p>Update <code>org.junit:junit-bom</code> to version <code>5.10.3</code> (<a href="https://github.com/apache/logging-log4j2/pull/2694">2694</a>)</p>
 </li>
 <li>
-<p>Update <code>org.mockito:mockito-bom</code> to version <code>5.13.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/2896">2896</a>)</p>
+<p>Update <code>org.mockito:mockito-bom</code> to version <code>5.14.1</code> (<a href="https://github.com/apache/logging-log4j2/pull/3042">3042</a>)</p>
 </li>
 <li>
 <p>Update <code>org.mongodb:bson</code> to version <code>5.1.4</code> (<a href="https://github.com/apache/logging-log4j2/pull/2919">2919</a>)</p>
